[package]
name = "forte"
version = "1.0.0-dev"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Low-overhead parallel and async work scheduler"
repository = "https://github.com/NthTensor/Forte"
rust-version = "1.96.0"

# Lie to cargo
links = "forte"

[workspace]
resolver = "2"
members = ["ci"]

[dependencies]
async-task = "4.7.1"
atomic-wait = "1.1.0"
lazy_static = "1.5.0"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
st3 = "0.4"
futures-lite = "2.6.1"

[dev-dependencies]
# Required for comparison testing
divan = "0.1.17"
rayon = "1.10.0"
chili = "0.2"
bevy_tasks = { version = "0.16.1", features = [ "multi_threaded" ] }
# Used for some benchmarks
dashmap = "6.1.0"
# Used for A/B perf testing
criterion = { version = "0.5" }

[profile.release]
debug = true

[profile.bench]
opt-level = 3

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[[bench]]
name = "fork_join"
harness = false

[[bench]]
name = "bevy_tasks"
harness = false

[[bench]]
name = "flood_fill"
harness = false

[[bench]]
name = "flat_scope"
harness = false
