[package]
name = "forte-rayon-compat"
version = "1.12.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A shim that allows replacing rayon-core with forte"
repository = "https://github.com/NthTensor/Forte"

[dependencies]
forte = { version = "1.0.0-alpha", path = ".." }

[features]
web_spin_lock = []
